# ChessEngine

./: CMakeLists.txt  Vector2.cpp  Vector2.h  main.cpp
Game/: Board.cpp  Board.h  ChessSolver.cpp  ChessSolver.h  GUI.cpp  GUI.h  Game.cpp  Game.h  Move.cpp  Move.h
Piece/: Bishop.cpp  Bishop.h  King.cpp  King.h  Knight.cpp  Knight.h  Pawn.cpp  Pawn.h  Piece.cpp  Piece.h  Queen.cpp  Queen.h  Rook.cpp  Rook.h
